--- a/Pages/Components/NoteComponent.razor
+++ b/Pages/Components/NoteComponent.razor
@@ -5,13 +5,13 @@
 <div class="card">
     <div class="card-header" style="background-color:#ba55d3">
         <p class="h5">
-            <button id="0HLPTKM2659LL" type="button" class="btn" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                <b>Note</b>
+            <button id="0HLPTKM2659LL" type="button" class="btn" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                 <img src="/css/writing.png" height="20" width="20">
+                <b>Note</b>
             </button>
         </p>
     </div>
-    <div class="collapse" id="collapseTwo">
+    <div class="collapse" id="collapseThree">
         <div class="card-body" style="background-color:whitesmoke">
             <div hidden="hidden">
                 <p hidden=""></p>
