--- a/Pages/MyProfile.razor
+++ b/Pages/MyProfile.razor
@@ -77,12 +77,12 @@
                 else
                 {
                     <img src="/css/bootstrap/img.jpg" alt="John" class="card-img-top imgprofile">
-                    <p class="title">John Wick</p>
+                    <p class="title">@userInfo.FirstName @userInfo.LastName</p>
 
                     <div class="text-card">
                         <p><i class="fa fa-home">@userInfo.City</i></p>
                         <p><i class="fa fa-university"></i>@userInfo.University</p>
-                        <p><i class="fa fa-phone-square"></i>@userInfo.PhoneNumber</p>
+                        <p><i class="fa fa-phone-square"></i>@userInfo.Phone</p>
                         <hr>
                         <p><b><i class="fa fa-asterisk info"></i>Skills</b></p>
                         <div class="skill-bar">
@@ -92,13 +92,11 @@
 
                     <center>
                         <p>
-                            <a href="https://www.facebook.com/ionuut.alban">
+                            <a href="@userInfo.Facebook">
                                 <i class="fa fa-facebook-square"></i>
-                                @userInfo.Facebook
                             </a>
-                            <a href="https://github.com/albanionut">
-                                <i class="fa fa-github" aria-hidden="true"></i>
-                                @userInfo.Github
+                            <a href="@userInfo.Github">
+                                <i class="fa fa-github" aria-hidden="true"></i> 
                             </a>
                         </p>
                     </center>
