My profile done

--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -25,7 +25,7 @@
 }
 else
 {
-    @Context.HttpContext.Response.Redirect("~Identity/Account/Login")
+    //@Context.HttpContext.Response.Redirect("~Identity/Account/Login")
     <div class="main">
         <div class="top-row px-4">
             <LoginDisplay />
