--- a/Pages/MyProfile.razor
+++ b/Pages/MyProfile.razor
@@ -79,15 +79,12 @@
                     <img src="/css/bootstrap/img.jpg" alt="John" class="card-img-top imgprofile">
                     <p class="title">@userInfo.FirstName @userInfo.LastName</p>
 
-                    <div class="text-card">
-                        <p><i class="fa fa-home">@userInfo.City</i></p>
+                    <div class="text-card"style="padding-bottom:0px">
+                        <p style="font-size:20px"><i class="fa fa-home"style="margin-right:20px"> @userInfo.City</i></p>
                         <p><i class="fa fa-university"></i>@userInfo.University</p>
                         <p><i class="fa fa-phone-square"></i>@userInfo.Phone</p>
                         <hr>
-                        <p><b><i class="fa fa-asterisk info"></i>Skills</b></p>
-                        <div class="skill-bar">
-                            <div class="progress-bar" style="width:80%">Language C# 80%</div>
-                        </div>
+                        
                     </div>
 
                     <center>
