--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -14,23 +14,18 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-        <AuthorizeView Roles="Admin">
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="Identity/Account/Register">
-                    <span class="oi oi-plus" aria-hidden="true"></span> Counter
-                </NavLink>
-            </li>
-        </AuthorizeView>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Projects
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="tasks">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Tasks
-            </NavLink>
-        </li>
+        <AuthorizeView Roles="ADMIN,MENTOR">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="tasks">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Tasks
+                </NavLink>
+            </li>
+        </AuthorizeView>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="myprofile">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> MyProfile
